fixed some column spacing on the jingle lists page so that date and write a review appear on a single line

--- a/public/stylesheets/user-jinglelists.css
+++ b/public/stylesheets/user-jinglelists.css
@@ -196,3 +196,7 @@ img {
 #empty-list-message {
     text-align: center;
 }
+
+#date-column, #review-column {
+    width: 15%;
+}
